--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
