Add animation in delete item in cart

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^4.1.1",
     "antd": "^5.6.1",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
